third_party/move/move-compiler-v2/tests/match-checks/range_unreachable.exp

Diagnostics:
error: unreachable pattern
  ┌─ tests/match-checks/range_unreachable.move:6:13
  │
6 │             3..7 => 2,
  │             ^^^^

error: unreachable pattern
   ┌─ tests/match-checks/range_unreachable.move:15:13
   │
15 │             1..10 => 2,
   │             ^^^^^

error: unreachable pattern
   ┌─ tests/match-checks/range_unreachable.move:23:13
   │
23 │             5 => 2,
   │             ^

error: unreachable pattern
   ┌─ tests/match-checks/range_unreachable.move:31:13
   │
31 │             5 => 2,
   │             ^

error: unreachable pattern
   ┌─ tests/match-checks/range_unreachable.move:40:13
   │
40 │             1..10 => 2,
   │             ^^^^^
